# Veritas

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  README.md  RELEASE.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  extension.yml  release.yml
docs/: distribution.md  example-investigation.md
mcpb/: README.md  manifest.json
skills/veritas-investigator/: SKILL.md
src/veritas/: __init__.py  _sandbox_child.py  discovery.py  execute.py  findings.py  ingest.py  methodology.py  profile.py  responses.py  sandbox.py  security.py  server.py  session.py
src/veritas/evals/: __init__.py  __main__.py  cases.py  scoring.py
tests/: conftest.py  test_discovery.py  test_evals.py  test_example_investigation.py  test_execute.py  test_findings.py  test_import.py  test_ingest.py  test_methodology.py  test_profile.py  test_sandbox.py  test_sandbox_child.py  test_security.py  test_server.py  test_session.py
tests/fixtures/: all_null.csv  duplicate_cols.csv  mixed_type.csv  single_row.csv
