[project]
name = "veritas-mcp"
version = "0.1.0"
description = "An MCP server that turns Claude into a rigorous, hypothesis-driven data investigator. Every numeric claim must trace to an executed artifact."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Veritas contributors" }]
keywords = ["mcp", "claude", "duckdb", "data-analysis", "statistics", "root-cause"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.1",
    "matplotlib>=3.8",
    "mcp>=1.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pydantic>=2.7",
    "scipy>=1.13",
    "statsmodels>=0.14",
]

[project.scripts]
veritas = "veritas.server:main"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veritas"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle — backs the "every public function has a docstring" bar
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PTH", # pathlib over os.path
    "PL",  # pylint (incl. complexity limits, approximates the 60-line rule)
    "RUF", # ruff-specific
]
ignore = [
    "PLR2004", # magic-value comparisons are routine in statistics code
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "openpyxl.*",
    "scipy.*",
    "statsmodels.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=veritas --cov-branch --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.report]
show_missing = true
